corrigiendo comentarios en index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </header>
         <table>
             <!-- Posiblemente se tenga que colocar código HTML a mano que no
-                 es necesario que sea colocado por javascript */
+                 es necesario que sea colocado por javascript -->
             <script>
                 /* Remplazar la siguiente línea y colocar el código que genere
                    cada renglón de la tabla */
